--- a/example/dapp/pubspec.yaml
+++ b/example/dapp/pubspec.yaml
@@ -4,18 +4,18 @@ version: 1.0.0
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
-  path: ^1.8.0
+  path: ^1.8.2
 
   # WalletConnect
   walletconnect_dart:
     path: ../../
 
   # Algorand
-  algorand_dart: 1.0.1
+  algorand_dart: ^1.0.3
 
 dev_dependencies:
-  lints: ^1.0.0
-  test: ^1.16.0
+  lints: ^2.0.0
+  test: ^1.21.5
